--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         margin: 0 auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
     }
+    h1 { font-style: italic; }
 </style>
 </head>
 <body>
-<h1>This is version 1.0</h1>
+<h1>This is version 1.000001</h1>
 </body>
 </html>
